# YTflac

./: .gitignore  LICENSE  README.md  YtFLAC.iss  build.py  main.py  make_exe.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-release.yml  publish.yml
SpotiFLAC/: __init__.py  __main__.py
SpotiFLAC/api/: server.py
SpotiFLAC/core/: console.py  isrc_helper.py  progress.py  spotify_totp.py  tagger.py
SpotiFLAC/gui/: app.py  style.py
SpotiFLAC/providers/: __init__.py  amazon.py  qobuz.py  spotify_metadata.py  tidal.py  youtube.py  youtube_input.py
tests/: test_debug.py  test_gui_components.py  test_youtube_playlist_limit.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  main.tsx  theme.ts
web/src/components/: DownloadPanel.tsx  PlaylistHeader.tsx  TrackList.tsx  UnmatchedDialog.tsx  UrlInputBar.tsx
ytflac/: __init__.py  __main__.py  check_update.py  downloader.py  system_awake.py
ytflac/api/: jobs.py  server.py
ytflac/core/: __init__.py  console.py  download_validation.py  errors.py  history.py  http.py  isrc_cache.py  isrc_finder.py  isrc_helper.py  link_resolver.py  lyrics.py  metadata_enrichment.py  models.py  musicbrainz.py  paths.py  progress.py  provider_stats.py  spotify_totp.py  tagger.py
ytflac/gui/: app.py  fluent.py  main.py  main_window.py  main_window_logic.py  main_window_runtime.py  main_window_shared.py  main_window_ui.py  settings_dialog.py  style.py  style_qss.py  widgets.py  worker.py
ytflac/gui/components/: __init__.py  header.py  log_panel.py  panels.py  thumbnail.py  tick_checkbox.py  (+2 more)
ytflac/providers/: __init__.py  amazon.py  base.py  deezer.py  qobuz.py  songstats.py  soundplate.py  spotidownloader.py  spotify_metadata.py  tidal.py  youtube.py  youtube_input.py  youtube_matcher.py  youtube_parser.py
(+13 files in other folders)
